After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 788920 - Fix function name typo in websocket API doc
Fix function name typo in websocket API doc
Status: RESOLVED FIXED
Product: libsoup
Classification: Core
Component: Misc
unspecified
Other All
: Normal normal
: ---
Assigned To: libsoup-maint@gnome.bugs
libsoup-maint@gnome.bugs
Depends on:
Blocks:
 
 
Reported: 2017-10-13 09:06 UTC by Nirbheek Chauhan
Modified: 2017-10-13 16:07 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
soup: Fix function name typo in websocket API doc (1.30 KB, patch)
2017-10-13 09:06 UTC, Nirbheek Chauhan
none Details | Review
soup: some typos in websocket API doc (1.73 KB, patch)
2017-10-13 09:10 UTC, Nirbheek Chauhan
committed Details | Review

Description Nirbheek Chauhan 2017-10-13 09:06:08 UTC
It's soup_session_websocket_connect_finish() not soup_websocket_connect_finish(). Breaks links in gtk-doc documentation.
Comment 1 Nirbheek Chauhan 2017-10-13 09:06:13 UTC
Created attachment 361495 [details] [review]
soup: Fix function name typo in websocket API doc
Comment 2 Nirbheek Chauhan 2017-10-13 09:10:38 UTC
Created attachment 361497 [details] [review]
soup: some typos in websocket API doc
Comment 3 Claudio Saavedra 2017-10-13 14:05:57 UTC
Review of attachment 361497 [details] [review]:

Please obsolete old patches when submitting new versions. Otherwise it's confusing.
Comment 4 Nirbheek Chauhan 2017-10-13 14:27:32 UTC
Oops, sorry I used git bz and that usually handles obsoleting for me but this time I changed the commit message so it missed that. Will push in a bit, thanks! :)
Comment 5 Nirbheek Chauhan 2017-10-13 16:06:25 UTC
Attachment 361497 [details] pushed as ccb561a - soup: some typos in websocket API doc