soup: some typos in websocket API doc

https://bugzilla.gnome.org/show_bug.cgi?id=788920